--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Club Applications Form</title>
+        <title>Club Application Form</title>
     </head>
     <body>
-        <form action="/submit-form" method="post"; onsubmit="return confirm('Do you want to submit the form?');" onreset="return confirm('Do you want to reset the form?');">
+        <form action="/submit-form" method="post";
+        onsubmit="return confirm('Do you want to submit the form?');"
+        onreset="return confirm('Do you want to reset the form?');">
+
+        <h1>Club Application Form</h1>
+
+        <fieldset form="pinfo">
+
+            <legend>Personal Information</legend>
+
             <label for="studid">Student ID: </label><br>
-            <input type="number" id="studid" name="studid"><br>
+            <input type="number" id="studid" name="studid" required onblur="myFunction(this)"><br>
             <label for="fname">Full name: </label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fname" name="fname" required onblur="myFunction(this)"><br>
             <label for="bday">Birthday: </label><br>
-            <input type="date" id="bday" name="bday"><br>
+            <input type="date" id="bday" name="bday" required onblur="myFunction(this)"><br>
+            <label for="email">Email address: </label><br>
+            <input type="text" id="email" name="email" required onblur="myFunction(this)"><br>
+        </fieldset>
+
+        <br>
+
+        <fieldset form="ainfo">
+
+            <legend>Application</legend>
             <label for="mphone">Mobile phone: </label><br>
-            <input type="text" id="mphone" name="mphone"><br>
+            <input type="text" id="mphone" name="mphone" required onblur="myFunction(this)"><br>
             <label for="grlevel">Grade Level: </label>
-            <select name="grlevel" id="grlevel">
+            <select name="grlevel" id="grlevel" required onblur="myFunction(this)">
                 <option value="seven">7</option>
                 <option value="eight">8</option>
                 <option value="nine">9</option>
@@ -23,11 +41,11 @@
                 <option value="twelve">12</option>
             </select><br>
             <label for="int">Intern</label>
-            <input type="radio" name="residency" value="int" id="int">
+            <input type="radio" name="residency" value="int" id="int" required onblur="myFunction(this)">
             <label for="ext">Extern</label>
-            <input type="radio" name="residency" value="ext" id="ext"><br>
+            <input type="radio" name="residency" value="ext" id="ext" required onblur="myFunction(this)"><br>
             <label for="club">Preferred Club/Organization: </label>
-            <select name="club" id="club">
+            <select name="club" id="club" required onblur="myFunction(this)">
                 <option value="bake">Bake Club</option>
                 <option value="sing">Himig Agham</option>
                 <option value="draw">Likha</option>
@@ -35,10 +53,25 @@
                 <option value="act">Kamalayan</option>
                 <option value="badminton">Volant</option>
             </select><br>
+        </fieldset>
+        <br>
             <label for="reason">Why do you want to join?</label><br>
-            <textarea rows ="3" cols="30" name="reason" id = "reason"></textarea>
+            <textarea id = "tArea" name="reason" rows ="4" cols="50" required onblur="myFunction(this)"></textarea><br>
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </form>
+
+        <script>
+
+            function myFunction(field) {
+                if(field.value === "") {
+                    field.style.border = "2px solid red";
+                }
+                else {
+                    field.style.border = "";
+                }
+            }
+
+        </script>
     </body>
 </html>
