--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
         <h1>Club Application Form</h1>
 
-        <form action="submit" method="post"
-            onsubmit="return confirm('Do you want to submit the form?');"
-            onreset="return confirm('Do you want to reset the form?');">
+        <form id="signupForm">
 
         <fieldset form="pinfo">
 
@@ -55,10 +53,56 @@
             <label>Why do you want to join? <textarea id = "tArea" name="reason" rows ="4" cols="50" required onblur="myFunction(this)"></textarea></label><br>
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
+
+            <button type="button" onclick="location.href='viewSignUps.html'"> View Signups</button>
         </form>
 
         <script>
 
+            const KEY = 'clubSignups';
+
+            function loadSignups() {
+                const raw= localStorage.getItem(KEY);
+
+                if (raw){
+                    return JSON.parse(raw);
+                }
+                else{
+                    return [];
+                }
+            }
+
+            function saveSignups(signups) {
+                localStorage.setItem(KEY, JSON.stringify(signups));
+            }
+
+            document.getElementById("signupForm").addEventListener("submit", function (event)) {
+                event.preventDefault();
+            }
+
+            if (!confirm("Do you want to submit the form")) {
+                return;
+            }
+
+            const signup = {
+                studentId: document.getElementById("studid").value,
+                fullname: document.getElementById("fname").value,
+                birthday: document.getElementById("bday").value,
+                email: document.getElementById("email").value,
+                mobile: document.getElementById("mphone").value,
+                grade: document.getElementById("grlevel").value,
+                residency: document.querySelector('input[name="residency"]:checked').value,
+                club: document.getElementById("club").value,
+                reason: document.getElementById("reason").value
+            };
+
+            const signups = loadSignups();
+            signups.push(signup);
+            saveSignups(signups);
+
+            alert("Signup succesfully saved")
+            this.reset();
+            
             function myFunction(field) {
                 if(field.value === "") {
                     field.style.border = "2px solid red";
