--- a/viewSignUps.html
+++ b/viewSignUps.html
@@ -13,12 +13,12 @@
         <label> Select Club:
         <select id="clubFilter">
             <option value="all">ALL</option>
-            <option value="Bake Club">Bake Club</option>
-            <option value="Himig Agham">Himig Agham</option>
-            <option value="Likha">Likha</option>
-            <option value="CARE">CARE</option>
-            <option value="Kamalayan">Kamalayan</option>
-            <option value="Volant">Volant</option>
+            <option value="bake">Bake Club</option>
+            <option value="sing">Himig Agham</option>
+            <option value="draw">Likha</option>
+            <option value="nature">CARE</option>
+            <option value="act">Kamalayan</option>
+            <option value="badminton">Volant</option>
         </select>
         </label>
         <p>Total Sign-ups: <span id="total">0</span></p>
@@ -88,7 +88,7 @@
                     <td>${s.residency}</td>
                  `;
 
-                 body.appendChild(row);
+                 tableBody.appendChild(row);
             });
 
             total.textContent = filtered.length;
